--- a/correspondences.tex
+++ b/correspondences.tex
@@ -312,7 +312,7 @@ is an equivalence for all $n$. Further suppose that
 \end{definition}
 
 \begin{note}
-  By presenting a symmetric monoidal $\infty$-category as a Cartesian fibration admitting relative finite limits, these conditions are satisfied automatically by \cite[Prop. 4.3.1.10]{highertopostheory}. For example, for any $\infty$-category $\category{C}$ with finite limits, the construction $\category{C}_{\times}$ in \cite{spectralmackeyfunctors2} yields such a Cartesian fibration.
+  By presenting a symmetric monoidal $\infty$-category as a Cartesian fibration admitting relative finite limits, these conditions are satisfied automatically by \cite[Prop.~4.3.1.10]{highertopostheory}. For example, for any $\infty$-category $\category{C}$ with finite limits, the construction $\category{C}_{\times}$ in \cite{spectralmackeyfunctors2} yields such a Cartesian fibration.
 \end{note}
 
 \begin{definition}
@@ -333,7 +333,7 @@ One might worry that this construction is not well-defined. At the moment, it's 
   The functor $F$ is well-defined.
 \end{lemma}
 \begin{proof}
-  The functor $F$ is well-defined in the first slot by \cite[Prop. 5.9]{1409.0837}, and well-defined in the second because if $f\colon \Sig^{n} \to \category{C}^{\otimes}_{\langle m \rangle}$ is Cartesian then so is $\rho_{*} \circ f$. To see this, we need to show that
+  The functor $F$ is well-defined in the first slot by \cite[Prop.~5.9]{1409.0837}, and well-defined in the second because if $f\colon \Sig^{n} \to \category{C}^{\otimes}_{\langle m \rangle}$ is Cartesian then so is $\rho_{*} \circ f$. To see this, we need to show that
   \begin{equation*}
     \begin{tikzcd}
       (\rho_{*} \circ f)(i, j) \simeq \lim\left[ \Lam^{m}_{/(i, j)} \to \Lam^{m} \overset{f}{\to} \category{C}^{\otimes}_{\langle m \rangle} \overset{\rho_{*}}{\to} \category{C}^{\otimes}_{\langle n \rangle} \right].
@@ -352,7 +352,7 @@ One might worry that this construction is not well-defined. At the moment, it's 
   The functor $G$ takes its values in $\CSS$, the $\infty$-category of complete Segal spaces.
 \end{proposition}
 \begin{proof}
-  This is \cite[Prop. 8.1]{1409.0837}
+  This is \cite[Prop.~8.1]{1409.0837}
 \end{proof}
 
 \begin{note}
@@ -443,7 +443,7 @@ Let $\category{C}^{\otimes}\colon \Finp \to \ICat$ be a pullback-compatible symm
   (\D\op)^{k} \times \Finp \to \S;\qquad ([m_{1}], \ldots, [m_{k}], \langle n \rangle) \mapsto \Fun^{\Cart}(\Sig^{m_{1}, \ldots, m_{k}}, \category{C}^{\otimes}_{\langle n \rangle})
 \end{equation*}
 
-This is well-defined in the first slot by the reasoning in \cite[Cor. 5.12]{1409.0837}, and in the second by exactly the same reasoning as above.
+This is well-defined in the first slot by the reasoning in \cite[Cor.~5.12]{1409.0837}, and in the second by exactly the same reasoning as above.
 
 \section{Push/pull and the Grothendieck construction}
 \label{sec:push_pull_and_the_grothendieck_construction}
