--- a/introduction.tex
+++ b/introduction.tex
@@ -57,9 +57,9 @@ one can produce a morphism $F(c) \to F(c'')$ in $\category{D}$ via the compositi
   \end{tikzcd}.
 \end{equation*}
 
-The data of \hyperref[eq:span]{Diagram~\ref*{eq:span}} is known as a \emph{span} in $\category{C}$. It is natural to ask whether this construction can be extended to a functor $\Span(\category{C}) \to \category{D}$, where $\Span(\category{C})$ is an infinity-category whose objects are the same as the objects of $\category{C}$, and whose morphisms are spans in $\category{C}$.
+The data of \hyperref[eq:span]{Diagram~\ref*{eq:span}} is known as a \emph{span} in $\category{C}$. It is natural to ask whether this construction can be extended to a functor $\Span(\category{C}) \to \category{D}$, where $\Span(\category{C})$ is an $\infty$-category whose objects are the same as the objects of $\category{C}$, and whose morphisms are spans in $\category{C}$.
 
-In defining the quasicategory $\Span(\category{C})$, it is necessary to specify a composition law for spans. There is a natural way of doing this: given two spans $X \leftarrow Y \rightarrow X'$ and $X' \leftarrow Y' \rightarrow X''$ in $\category{C}$, we define their composition to be the pullback $X \leftarrow Y \times_{X'} Y' \rightarrow X''$ as below.
+We will define two $\infty$-categorical models for our category of spans in $\category{C}$: a Segal space $\SPAN(\category{C})$, and a quasicategory $\Span(\category{C})$. Let us for the moment concentrate on the quasicategorical model, although what we say would equally apply to the Segal space model. In defining the quasicategory $\Span(\category{C})$ of spans in $\category{C}$, it is necessary to specify a composition law for spans. There is a natural way of doing this: given two spans $X \leftarrow Y \rightarrow X'$ and $X' \leftarrow Y' \rightarrow X''$ in $\category{C}$, we define their composition to be the pullback $X \leftarrow Y \times_{X'} Y' \rightarrow X''$ as below.
 \begin{equation*}
   \begin{tikzcd}
     && Y \times_{X'} Y'
@@ -78,7 +78,7 @@ In defining the quasicategory $\Span(\category{C})$, it is necessary to specify 
     && X''
   \end{tikzcd}
 \end{equation*}
-In order for functor $\Span(\category{C}) \to \category{D}$ to be well-defined, it will have to respect composition. That is, we must have for all such pullback diagrams
+In order for functor $\Span(\category{C}) \to \category{D}$ to be well-defined, it will have to respect this composition law. That is, we must have for all such pullback diagrams an equivalence
 \begin{equation*}
   (p \circ f')_{!} \circ (g \circ q')^{*} \simeq p_{!} \circ q^{*} \circ f_{!} \circ g^{*}.
 \end{equation*}
@@ -88,7 +88,7 @@ Equivalently, for any pullback square as above we must have an equivalence
 \end{equation*}
 This is know as the \emph{base change condtition,} or the \emph{Beck--Chevalley condition.}
 
-The aim of this work is twofold. First, we to provide a new proof of a theorem of Barwick \cite[Thm. 12.2]{spectralmackeyfunctors1}, which provides sufficient conditions for a functor of quasicategories $p\colon \category{C} \to \category{D}$ to yield a cocartesian fibration between categories of spans $\Span(p)\colon \Span(\category{C}) \to \Span(\category{D})$. %We will see that in order for such a functor to exist, the map $p$ must satisfy an unstraightened version of the Beck--Chevalley condition.
+The aim of this work is twofold. First, we to provide a new proof of a theorem of Barwick \cite[Thm.~12.2]{spectralmackeyfunctors1}, which provides sufficient conditions for a functor of quasicategories $p\colon \category{C} \to \category{D}$ to yield a cocartesian fibration between $\infty$-categories of spans $\Span(p)\colon \Span(\category{C}) \to \Span(\category{D})$. %We will see that in order for such a functor to exist, the map $p$ must satisfy an unstraightened version of the Beck--Chevalley condition.
 
 Second, we use this result to construct a functor $\Span(\category{S}) \to \ICat$, which sends a space $X$ to the category $\P(X)$ of presheaves on $X$, and a morphism in $\Span(\S)$ represented by a span
 \begin{equation*}
@@ -105,16 +105,14 @@ to the functor $f_{!} \circ g^{*}\colon \P(X) \to \P(X')$. We further show that 
 
 We begin by providing a new proof of Barwick's theorem. Barwick's proof is explicit, constructing the necessary horn fillings by enumerating the necessary simplices, and arguing one-by-one why each filling is possible. This is an impressive feat of simplicial combinatorics, but provides little intuition for why the result might be true.
 
-Our proof is more homotopy-theoretic in character, relying on the fact that for any quasicategory $\category{C}$ with pullbacks, the infinity-category of spans in $\category{C}$ has a a natural incarnation as a complete Segal space $\SPAN(\category{C})$; the quasicategory $\Span(\category{C})$ is then the `first row' of this complete Segal space. We first define a notion of cocartesian fibration between complete Segal spaces, and show that any such cocartesian fibration gives a cocartesian fibration between first rows. The readily available homotopical data in complete Segal spaces allow us to define cocartesian morphisms purely via a condition on 2-simplices, where the combinatorics of horn filling in categories of spans is more manageable.
+Our proof is more homotopy-theoretic in character, relying on the fact that for any quasicategory $\category{C}$ with pullbacks, the $\infty$-category of spans in $\category{C}$ has a a natural incarnation as a complete Segal space $\SPAN(\category{C})$; the quasicategory $\Span(\category{C})$ is then the `first row' of this complete Segal space. We define a notion of cocartesian fibration between complete Segal spaces, and show that any such cocartesian fibration gives a cocartesian fibration between first rows. The readily available homotopical data in complete Segal spaces allow us to define cocartesian morphisms purely via a condition on 2-simplices, where the combinatorics of horn filling in categories of spans is more manageable.
 
-Our definition of a cocartesian fibration between Segal spaces is not new, although the form in which it is presented is original. The definition was first written down by De Brito in \cite{2016arXiv160500706B}, and expanded by Rasekh in \cite{rasekhcartesianfibrations}. There, Rasekh defines a model structure whose fibrant objects model cocartesian fibrations between Segal spaces. In defining this model structure, it is necessary to distinguish certain morphisms, and Rasekh solves this problem by adding an extra simplicial dimension; the model structure for cocartesian fibrations defined there is thus a model structure on slice categories of trisimplicial sets.
+Our definition of a cocartesian fibration between Segal spaces is not new, although the form in which it is presented is original. The definition was first written down by De Brito in \cite{2016arXiv160500706B}, and expanded by Rasekh in \cite{rasekhcartesianfibrations}. There, Rasekh defines a model structure whose fibrant objects model cocartesian fibrations between Segal spaces. In defining this model structure, it is necessary to distinguish certain morphisms, and Rasekh solves this problem by adding an extra simplicial dimension; the model structure for cocartesian fibrations defined there is thus a model structure on slice categories of trisimplicial sets. In this work we restrict our attention to cocartesian fibrations between Segal spaces. This allows us to approach the problem of controlling cocartesian morphisms differently, by introducing a marking. This method is much closer to that used to work with cocartesian fibrations in \cite{highertopostheory}, and has the advantage that many of the results proved there can be leveraged in explicit calculations. In particular, we provide a definition of a cocartesian fibration between complete Segal spaces to which Rasekh's definition reduces in the case that both the domain and codomain are complete Segal spaces.
 
-In this work we restrict our attention to cocartesian fibrations between Segal spaces. This allows us to approach the problem of controlling cocartesian morphisms differently, by introducing a marking. This method is much closer to that used to work with cocartesian fibrations in \cite{highertopostheory}, and has the advantage that many of the results proved there can be leveraged in explicit calculations. In particular, we provide a definition of a cocartesian fibration between complete Segal spaces to which Rasekh's definition reduces in the case that both the domain and codomain are complete Segal spaces.
-
-This work consists of three sections. In \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}}, we explore cocartesian fibrations between Segal spaces. After a review in \hyperref[ssc:a_review_of_bisimplicial_sets]{Section~\ref*{ssc:a_review_of_bisimplicial_sets}} of some material in \cite{qcats_vs_segal_spaces}, most notably the box product $- \square -$ and its adjoints, we define marked bisimplicial sets in \hyperref[ssc:marked_bisimplicial_sets]{Section~\ref*{ssc:marked_bisimplicial_sets}}. We then define a marked version of the box functor, and show that some results analogous to the unmarked case hold. In \hyperref[ssc:simplicial_technology]{Section~\ref*{ssc:simplicial_technology}}, we prove some technical lemmas about simplicial sets with certain restrictions on individual morphisms. The main result is a lemma which allows us to translate a condition on marked bisimplicial sets for a `pointwise condition' involving unmarked bisimplicial sets.
+This work consists of three sections. In \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}}, we explore cocartesian fibrations between Segal spaces. After a review in \hyperref[ssc:a_review_of_bisimplicial_sets]{Section~\ref*{ssc:a_review_of_bisimplicial_sets}} of some material in \cite{qcats_vs_segal_spaces}, most notably the box product $- \square -$ and its adjoints, we define marked bisimplicial sets in \hyperref[ssc:marked_bisimplicial_sets]{Section~\ref*{ssc:marked_bisimplicial_sets}}. We then define a marked version of the box functor, and prove some results analogous to the unmarked case. In \hyperref[ssc:simplicial_technology]{Section~\ref*{ssc:simplicial_technology}}, we prove some technical lemmas about simplicial sets with certain restrictions on individual morphisms. The main result is a lemma which allows us to translate a condition on marked bisimplicial sets for a `pointwise condition' involving unmarked bisimplicial sets.
 
 In \hyperref[ssc:cocartesian_fibrations]{Section~\ref*{ssc:cocartesian_fibrations}}, we define the notion of a cocartesian morphism via a condition on left horn filling of $2$-simplices, and define a cocartesian fibration between complete Segal spaces to be a Reedy fibration admitting cocartesian lifts. We show that this implies all higher left horn filling conditions, and use this to show that any cocartesian fibration between complete segal spaces yields a cocartesian fibration (in the sense of quasicategories) between first rows.
 
-In \hyperref[sec:segal_spaces_of_spans]{Section~\ref*{sec:segal_spaces_of_spans}}, we use these results to prove the above of Barwick, originally published in \cite[Thm. 12.2]{spectralmackeyfunctors1}. After a brief review in \hyperref[ssc:introduction]{Subsection~\ref*{ssc:introduction}} of the definitions of the quasicategory and Segal space models for the $\infty$-category of spans in a quasicategory $\category{C}$, we construct in \hyperref[ssc:defining_the_maps_p_q_and_r]{Sections~\ref*{ssc:defining_the_maps_p_q_and_r}--\ref*{ssc:building_the_functor}} our functor $\Span(\S) \to \ICat$, and show that it is lax monoidal.
+In \hyperref[sec:segal_spaces_of_spans]{Section~\ref*{sec:segal_spaces_of_spans}}, we use these results to prove the above of Barwick, originally published in \cite[Thm.~12.2]{spectralmackeyfunctors1}. After a brief review in \hyperref[ssc:introduction]{Subsection~\ref*{ssc:introduction}} of the definitions of the quasicategory and Segal space models for the $\infty$-category of spans in a quasicategory $\category{C}$, we construct in \hyperref[ssc:defining_the_maps_p_q_and_r]{Sections~\ref*{ssc:defining_the_maps_p_q_and_r}--\ref*{ssc:building_the_functor}} the functor $\Span(\S) \to \ICat$, and show that it is lax monoidal.
 
 \end{document}
